# mishka_chelekom

./: .formatter.exs  .gitignore  CHANGELOG.md  MCP.md  README.md  SECURITY.md  SHOWCASE_RECHECK_TODO.md  mix.exs  usage-rules.md
.github/workflows/: retire-js.yml  semgrep.yml  test.yml
assets/css/: app.css
component/: alert.ex
development/: .formatter.exs  README.md  check_http.exs  gen_showcase.exs  headless_smoke.exs  idempotency_check.exs  mix.exs
development/assets/: package-lock.json  package.json
development/assets/css/: app.css
development/assets/js/: app.js
development/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
development/lib/: development.ex  development_web.ex
development/lib/development/: application.ex
development/lib/development_web/: endpoint.ex  kit.ex  macro_components.ex  router.ex  showcase_kit.ex  showcase_typography_kit.ex  telemetry.ex  widgets.ex
development/mob/: .credo.exs  .formatter.exs  .gitignore  .tool-versions  CLAUDE.md  MISHKA_MOB_INTEGRATION.md  mix.exs
development/mob/android/: .editorconfig  build.gradle
development/mob/android/app/src/main/jni/: CMakeLists.txt  beam_jni.c  build.zig
development/mob/config/: config.exs
development/web/: .gitignore  CLAUDE.md  README.md  check_http.exs  gen_showcase.exs  idempotency_check.exs  mix.exs  smoke.exs
documentation/: headless_backlog.md  headless_missing_plan.md  js_editors_plan.md
documentation/dsls/: DSL-MishkaChelekom.Kit.md  DSL-MishkaChelekom.md
lib/mishka_chelekom/: application.ex  cms_bundle_exporter.ex  component.ex  config.ex  css.ex  css_config.ex  demo_assigns_extractor.ex  dsl.ex  heex_tag_extractor.ex  heex_tag_rewriter.ex  helper_condition_index.ex  helper_discriminators.ex  kit.ex  overrides.ex  presets.ex  simple_css_utilities.ex  test.ex
lib/mishka_chelekom_web/: router.ex
lib/templates/: alert.eex
mishka_chelekom/: .gitignore  mix.exs
mishka_ui_dsl/: .gitignore  README.md  mix.exs
mishka_ui_dsl/lib/: mishka_ui_dsl.ex
notes/: customize-macro.todo.md
priv/components/: accordion.eex  accordion.exs  alert.eex  alert.exs  avatar.eex  avatar.exs  badge.eex  badge.exs  banner.eex  banner.exs  blockquote.eex  blockquote.exs  breadcrumb.eex  breadcrumb.exs  button.eex  button.exs  card.eex  card.exs  carousel.eex  carousel.exs  chat.eex  chat.exs  checkbox_card.eex  checkbox_card.exs  checkbox_field.eex  checkbox_field.exs  clipboard.eex  clipboard.exs  collapse.eex  collapse.exs  color_field.eex  color_field.exs  combobox.eex  combobox.exs  date_time_field.eex  date_time_field.exs  device_mockup.eex  device_mockup.exs  divider.eex  divider.exs  (+108 more)
priv/demos/: _directive_fixture_live.html.heex  accordion_live.ex  accordion_live.html.heex  alert_live.ex  alert_live.html.heex  avatar_live.ex  avatar_live.html.heex  badge_live.ex  badge_live.html.heex  banner_live.ex  banner_live.html.heex  blockquote_live.ex  blockquote_live.html.heex  breadcrumb_live.ex  breadcrumb_live.html.heex  button_live.ex  button_live.html.heex  card_live.ex  card_live.html.heex  carousel_live.ex  carousel_live.html.heex  chat_live.ex  chat_live.html.heex  checkbox_card_live.ex  checkbox_card_live.html.heex  checkbox_field_live.ex  checkbox_field_live.html.heex  cli_live.ex  cli_live.html.heex  clipboard_live.ex  clipboard_live.html.heex  collapse_live.ex  collapse_live.html.heex  color_field_live.ex  color_field_live.html.heex  combobox_live.ex  combobox_live.html.heex  date_time_field_live.ex  date_time_field_live.html.heex  design_system_live.ex  (+117 more)
priv/headless/: accordion.eex  accordion.exs  action_icon.eex  action_icon.exs  alert_dialog.eex  alert_dialog.exs  alpha_slider.eex  alpha_slider.exs  anchor.eex  anchor.exs  angle_slider.eex  angle_slider.exs  autocomplete.eex  autocomplete.exs  avatar.eex  avatar.exs  burger.eex  burger.exs  calendar.eex  calendar.exs  checkbox.eex  checkbox.exs  checkbox_group.eex  checkbox_group.exs  chip.eex  chip.exs  close_button.eex  close_button.exs  code.eex  code.exs  collapsible.eex  collapsible.exs  color_input.eex  color_input.exs  color_picker.eex  color_picker.exs  color_swatch.eex  color_swatch.exs  combobox.eex  combobox.exs  (+110 more)
priv/templates/: accordion.exs  alert.eex  alert.exs  alert.yaml  divider.exs
test/: test_helper.exs  usage_rules_sync_test.exs
test/mishka_chelekom/: catalog_integrity_test.exs  catalog_test.exs  cms_bundle_exporter_test.exs  component_test.exs  config_smoke_test.exs  config_test.exs  css_config_smoke_test.exs  demo_assigns_extractor_test.exs  demo_harness_test.exs  helper_condition_index_test.exs  helper_discriminators_test.exs  kit_test.exs  layer3_test.exs  presets_test.exs  templates_prefix_consistency_test.exs
usage-rules/: mix-tasks.md
usage-rules/components/: accordion.md  alert.md  avatar.md  badge.md  banner.md  blockquote.md  breadcrumb.md  button.md  card.md  carousel.md  chat.md  checkbox_card.md  checkbox_field.md  clipboard.md  collapse.md  color_field.md  combobox.md  date_time_field.md  device_mockup.md  divider.md  drawer.md  dropdown.md  email_field.md  fieldset.md  file_field.md  footer.md  form_wrapper.md  gallery.md  icon.md  image.md  indicator.md  input_field.md  jumbotron.md  keyboard.md  layout.md  list.md  mega_menu.md  menu.md  modal.md  native_select.md  (+31 more)
usage-rules/docs/: cli.md  component-macro.md  design-system.md  getting-started.md  kit.md  roadmap.md  security.md
usage-rules/headless/: README.md  accordion.md  alert_dialog.md  autocomplete.md  avatar.md  calendar.md  checkbox.md  checkbox_group.md  collapsible.md  combobox.md  context_menu.md  dialog.md  disclosure.md  drawer.md  field.md  fieldset.md  hooks.md  menu.md  menubar.md  meter.md  navigation_menu.md  number_field.md  otp_field.md  popover.md  preview_card.md  progress.md  radio.md  radio_group.md  scroll_area.md  select.md  separator.md  slider.md  switch.md  tabs.md  toast.md  toggle.md  toggle_group.md  toolbar.md  tooltip.md
usage-rules/js/: carousel.md  clipboard.md  collapsible.md  combobox.md  floating.md  gallery_filter.md  scroll_area.md  sidebar.md
(+884 files in other folders)
